--- a/Capstone_Project_MA_2.ipynb
+++ b/Capstone_Project_MA_2.ipynb
@@ -123,6 +123,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(\"hellloooo\")"
+      ],
+      "metadata": {
+        "id": "uPCPD_NTKihx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "KbS2JUcQ9DN_"
