-Change data loading from using local to read from Google Drive

--- a/Capstone_Project_MA_2.ipynb
+++ b/Capstone_Project_MA_2.ipynb
@@ -149,11 +149,36 @@
     {
       "cell_type": "code",
       "source": [
-        "telemetry = pd.read_csv('/content/PdM_telemetry.csv')\n",
-        "errors = pd.read_csv('/content/PdM_errors.csv')\n",
-        "maint = pd.read_csv('/content/PdM_maint.csv')\n",
-        "failures = pd.read_csv('/content/PdM_failures.csv')\n",
-        "machines = pd.read_csv('/content/PdM_machines.csv')"
+        "# Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "d1r57rJza1q8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set dataset path\n",
+        "dataset_path = \"/content/drive/MyDrive/MA_DATASET\""
+      ],
+      "metadata": {
+        "id": "rObKjOXoa14l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "telemetry = pd.read_csv('/content/drive/MyDrive/MA_DATASET/PdM_telemetry.csv')\n",
+        "errors = pd.read_csv('/content/drive/MyDrive/MA_DATASET/PdM_errors.csv')\n",
+        "maint = pd.read_csv('/content/drive/MyDrive/MA_DATASET/PdM_maint.csv')\n",
+        "failures = pd.read_csv('/content/drive/MyDrive/MA_DATASET/PdM_failures.csv')\n",
+        "machines = pd.read_csv('/content/drive/MyDrive/MA_DATASET/PdM_machines.csv')"
       ],
       "metadata": {
         "id": "d9LXjzfkPFuA"
@@ -3883,7 +3908,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 614
+          "height": 594
         },
         "id": "Yy5c99QvvgGN",
         "outputId": "824ad4a3-98f6-4e04-e119-ec3071085804"
@@ -4170,7 +4195,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 614
+          "height": 594
         },
         "id": "Nm7FPZkTuDyt",
         "outputId": "0a1e0da4-beaf-4ed0-ae1c-1b61dabe6f62"
@@ -4627,11 +4652,11 @@
         "print(\"✅ Excel file with predicted maintenance datetime created!\")\n"
       ],
       "metadata": {
-        "id": "i8GDn6LNSzsv",
-        "outputId": "a5566a5a-6f52-425b-c23c-20c38f047d99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i8GDn6LNSzsv",
+        "outputId": "a5566a5a-6f52-425b-c23c-20c38f047d99"
       },
       "execution_count": 55,
       "outputs": [
@@ -4759,7 +4784,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 714
+          "height": 694
         },
         "id": "Dmi_Js4kGJYz",
         "outputId": "b829b48d-4b04-4f3c-b0ab-6da5110255e2"
@@ -4820,12 +4845,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "3p6QJIoiQS8a",
-        "outputId": "f890ece8-e5d5-4c3d-8f35-cd7bb5700a10",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 614
-        }
+          "height": 594
+        },
+        "id": "3p6QJIoiQS8a",
+        "outputId": "f890ece8-e5d5-4c3d-8f35-cd7bb5700a10"
       },
       "execution_count": 49,
       "outputs": [
