Add new evaluation metrics -ROC-AUC Score -Log Loss -Cohen Kappa Score -Matthews correlation coefficient

--- a/Capstone_Project_MA_2.ipynb
+++ b/Capstone_Project_MA_2.ipynb
@@ -181,7 +181,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 206
         },
         "id": "KrWpV_bwPIYA",
         "outputId": "02e51457-f588-40af-b5c5-c361dbc148d4"
@@ -1950,7 +1950,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 563
+          "height": 335
         },
         "id": "srBKcgeJR8IZ",
         "outputId": "9861e0b2-c716-45bc-e2ec-1a3a58b8dcea"
@@ -3895,7 +3895,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 513
+          "height": 614
         },
         "id": "Yy5c99QvvgGN",
         "outputId": "a1db3f64-3874-45ef-804d-25b2b2e4b680"
@@ -4186,7 +4186,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 513
+          "height": 614
         },
         "id": "Nm7FPZkTuDyt",
         "outputId": "581fb0be-243d-4eef-daa7-9236f0cc3ead"
@@ -4349,12 +4349,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "p9zMXNY7jK_5",
-        "outputId": "6047c8d0-3002-487a-ee03-eee180bfecbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
-        }
+        },
+        "id": "p9zMXNY7jK_5",
+        "outputId": "6047c8d0-3002-487a-ee03-eee180bfecbc"
       },
       "execution_count": 61,
       "outputs": [
@@ -4790,7 +4790,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 391
+          "height": 554
         },
         "id": "Dmi_Js4kGJYz",
         "outputId": "f4034b6c-ceb2-49e0-ff5e-5a868d090ff3"
@@ -4848,7 +4848,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 407
+          "height": 507
         },
         "id": "XAITaDr9WjWi",
         "outputId": "b9f9606d-7461-4269-b00c-a763c471b4e5"
@@ -4890,7 +4890,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 319
+          "height": 397
         },
         "id": "oD0sjr9h8Zie",
         "outputId": "a1262f61-bef3-429e-bdc9-151189b4223a"
@@ -4921,6 +4921,153 @@
       "metadata": {
         "id": "9wreJkPwZlqt"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ROC_AUC Score**"
+      ],
+      "metadata": {
+        "id": "K69XhhKWoiSx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import roc_auc_score\n",
+        "from sklearn.preprocessing import label_binarize\n",
+        "\n",
+        "# Binarize labels\n",
+        "y_test_bin = label_binarize(y_test, classes=le.transform(le.classes_))\n",
+        "y_pred_prob = model.predict_proba(X_test)\n",
+        "\n",
+        "# Calculate ROC AUC\n",
+        "auc_score = roc_auc_score(y_test_bin, y_pred_prob, average='macro', multi_class='ovr')\n",
+        "print(f\"Multiclass ROC AUC: {auc_score:.3f}\")"
+      ],
+      "metadata": {
+        "id": "O_40TVolofw3",
+        "outputId": "0fb761fa-ad3c-4b04-be96-4c5b4f210bfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Multiclass ROC AUC: 0.962\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**LOG LOSS**"
+      ],
+      "metadata": {
+        "id": "VdSQHRQ_onho"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import log_loss\n",
+        "\n",
+        "y_pred_prob = model.predict_proba(X_test)\n",
+        "logloss = log_loss(y_test, y_pred_prob)\n",
+        "print(f\"Log Loss: {logloss:.3f}\")"
+      ],
+      "metadata": {
+        "id": "6nivbkgJof33",
+        "outputId": "7bd29ee5-a21a-4ef3-a43f-ca119610f14c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Log Loss: 0.532\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**COHEN KAPPA SCORE**"
+      ],
+      "metadata": {
+        "id": "iR2r-hDHovRH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import cohen_kappa_score\n",
+        "\n",
+        "kappa = cohen_kappa_score(y_test, y_pred)\n",
+        "print(f\"Cohen's Kappa: {kappa:.3f}\")"
+      ],
+      "metadata": {
+        "id": "3OSo6e1qof8H",
+        "outputId": "9f7fa6c6-deea-4de4-fb52-41e5dbe86f30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cohen's Kappa: 0.782\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**MATTHEWS CORRELATION COEFFICIENT (MCC)**"
+      ],
+      "metadata": {
+        "id": "Eq0-NwTQoz0v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import matthews_corrcoef\n",
+        "\n",
+        "mcc = matthews_corrcoef(y_test, y_pred)\n",
+        "print(f\"Matthews Correlation Coefficient: {mcc:.3f}\")\n"
+      ],
+      "metadata": {
+        "id": "mdDXbg1yo1FR",
+        "outputId": "a089a28e-0344-4498-fc83-a910fb6c5e48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Matthews Correlation Coefficient: 0.783\n"
+          ]
+        }
+      ]
     }
   ]
 }
